--- a/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/public/bundle.css
+++ b/tensorboard_vega_embed/tensorboard_vega_embed/svelte_frontend/public/bundle.css
@@ -1,1 +1,2 @@
-main.svelte-1tky8bj{text-align:center;padding:1em;max-width:240px;margin:0 auto}h1.svelte-1tky8bj{color:#ff3e00;text-transform:uppercase;font-size:4em;font-weight:100}@media(min-width: 640px){main.svelte-1tky8bj{max-width:none}}
+.stepSlider.svelte-1k9dm0c{width:100%}
+main.svelte-1h6otfa{text-align:center;padding:1em;max-width:240px;margin:0 auto}@media(min-width: 640px){main.svelte-1h6otfa{max-width:none}}
